subiendo la responsividad de la pagina  para tablts y celulares

--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
     <!-- ============================== -->
     <!-- AQUI VA LA BARRA DE NAVEGACION -->
     <!-- ============================== -->
-    <header>
 
-    </header>
 
 
     <!-- ============================== -->
@@ -38,12 +36,13 @@
         <!-- SECCION MOSTRAR DATOS  -->
         <!-- ============================== -->
         <section class="main_mostrar_datos">
-            <img src="imagenes/Muñeco.png" alt="muneco descubriendo">
+            <section>
+                <img src="imagenes/Muñeco.png" alt="muneco descubriendo" class="main_mostrar_datos_imagen">
+            </section>
             <section class="main_intro_datos_container_texto">
                 <h3 class="main_mostrar_datos_titulo">Ningún mensaje fue encontrado</h3>
                 <p class="main_intro_datos_parrafo">Ingresa el texto que desees encriptar o desencriptar.</p>
             </section>
-
            
         </section>
 
@@ -52,9 +51,7 @@
     <!-- ============================== -->
     <!-- AQUI VA EL PIE DE LA PAGINA -->
     <!-- ============================== -->
-    <footer>
-
-    </footer>
+   
 
 
     <!-- ============================== -->
